fix contact.html for iphone 5

--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
 
     <main>
 
-        <div id="contact-page-outer">         
+        <div class="contact-page-outer">         
             <div class="contact-left-side">
-                    <div id="form-title">
+                    <div class="form-title">
                         <h2>Let's Talk</h2>
                         <h4>clive@rapiergroup.co.uk</h4>
                     </div>
