add information about design to readme.md, upload coolors image for readme.md

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <hr />
       </div>
 
-<!--Past Projects section-->     
+<!--Past Projects section-->
+<!--Responsive image gallery, adapted from code at W3Schools (https://www.w3schools.com/css/tryit.asp?filename=trycss_image_gallery_responsive)-->     
     <section>
       <div class="section-title">
         <h2>Past Projects</h2>
