--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                               <label for="name">Name</label>
                             </div>
                             <div class="col-75">
-                              <input type="text" id="name" name="name" placeholder="Your name..">
+                              <input type="text" id="name" name="name" placeholder="Your name.." required="" aria-required="" />
                             </div>
                           </div>
                           <div class="row">
@@ -56,7 +56,7 @@
                               <label for="phone">Phone Number</label>
                             </div>
                             <div class="col-75">
-                              <input type="text" id="phone" name="phone" placeholder="Your phone number..">
+                              <input type="number" id="phone" name="phone" placeholder="Your phone number.." required="" aria-required="" />
                             </div>
                           </div>
                           <div class="row">
@@ -64,7 +64,7 @@
                               <label for="subject">Subject</label>
                             </div>
                             <div class="col-75">
-                              <input type="text" id="subject" name="subject" placeholder="Subject..">
+                              <input type="text" id="subject" name="subject" placeholder="Subject.." required="" aria-required="" />
                             </div>
                           </div>
                           <div class="row">
@@ -72,7 +72,7 @@
                               <label for="message">Message</label>
                             </div>
                             <div class="col-75">
-                              <textarea id="message" name="message" placeholder="Write something.."></textarea>
+                              <textarea id="message" name="message" placeholder="Write something.." required="" aria-required=""></textarea>
                             </div>
                           </div>
                           <div class="row">
