--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                               <label for="phone">Phone Number</label>
                             </div>
                             <div class="col-75">
-                              <input type="number" id="phone" name="phone" placeholder="Your phone number.." required="" aria-required="" />
+                              <input type="tel" id="phone" name="phone" placeholder="Your phone number.." required="" aria-required="" />
                             </div>
                           </div>
                           <div class="row">
