change body height to 100vh and style table on tactics.html for responsiveness (not finished)

--- a/contact.html
+++ b/contact.html
@@ -53,10 +53,10 @@
                           </div>
                           <div class="row">
                             <div class="col-25">
-                              <label for="phone">Phone Number</label>
+                              <label for="email">Email</label>
                             </div>
                             <div class="col-75">
-                              <input type="tel" id="phone" name="phone" placeholder="Your phone number.." required="" aria-required="" />
+                              <input type="email" id="email" name="email" placeholder="Your email address.." required="" aria-required="" />
                             </div>
                           </div>
                           <div class="row">
