styled tactics.html table to be responsive at >599px

--- a/tactics.html
+++ b/tactics.html
@@ -77,35 +77,36 @@
 
                 <tbody>
                     <tr>
-                        <td class="box Rtable-cell">Branding</td>
-                        <td class="box Rtable-cell">Magazines</td>
-                        <td class="box Rtable-cell">Exhibitions</td>
-                        <td class="box Rtable-cell">Website & Landing Pages</td>
-                        <td class="box Rtable-cell">Brochures</td>
+                        <td class="box Rtable-cell tcol">Branding</td>
+                        <td class="box Rtable-cell tcol">Magazines</td>
+                        <td class="box Rtable-cell tcol">Exhibitions</td>
+                        <td class="box Rtable-cell tcol">Exhibitions</td>
+                        <td class="box Rtable-cell tcol">Website & Landing Pages</td>
+                        <td class="box Rtable-cell tcol">Brochures</td>
                     </tr>
 
                     <tr>
-                        <td class="box Rtable-cell">ID & Logo</td>
-                        <td class="box Rtable-cell">Advertising</td>
-                        <td class="box Rtable-cell">Conferences</td>
-                        <td class="box Rtable-cell">Email Campaigns</td>
-                        <td class="box Rtable-cell">Price List</td>
+                        <td class="box Rtable-cell tcol">ID & Logo</td>
+                        <td class="box Rtable-cell tcol">Advertising</td>
+                        <td class="box Rtable-cell tcol">Conferences</td>
+                        <td class="box Rtable-cell tcol">Email Campaigns</td>
+                        <td class="box Rtable-cell tcol">Price List</td>
                     </tr>
 
                     <tr>
-                        <td class="box Rtable-cell">Presentations</td>
-                        <td class="box Rtable-cell">Editorial</td>
-                        <td class="box Rtable-cell">Seminars</td>
-                        <td class="box Rtable-cell">SEO</td>
-                        <td class="box Rtable-cell">Graphics</td>
+                        <td class="box Rtable-cell tcol">Presentations</td>
+                        <td class="box Rtable-cell tcol">Editorial</td>
+                        <td class="box Rtable-cell tcol">Seminars</td>
+                        <td class="box Rtable-cell tcol">SEO</td>
+                        <td class="box Rtable-cell tcol">Graphics</td>
                     </tr>
 
                     <tr>
-                        <td class="box Rtable-cell">Signage</td>
-                        <td class="box Rtable-cell">Newsletters</td>
-                        <td class="box Rtable-cell">Demonstration Days</td>
-                        <td class="box Rtable-cell">PPC/CPC</td>
-                        <td class="box Rtable-cell">Leaflets</td>
+                        <td class="box Rtable-cell tcol">Signage</td>
+                        <td class="box Rtable-cell tcol">Newsletters</td>
+                        <td class="box Rtable-cell tcol">Demonstration Days</td>
+                        <td class="box Rtable-cell tcol">PPC/CPC</td>
+                        <td class="box Rtable-cell tcol">Leaflets</td>
                     </tr>
 
                     <tr>
