used auto indent on all pages to neaten up the code

--- a/planning.html
+++ b/planning.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,34 +10,36 @@
     <!--CREDIT: Favicon https://favicon.io/-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">  
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rapier Group | Clive Pearson</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
             <h1 id="logo">Rapier Group</h1>
         </a>
         <nav>
-                <ul id="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="planning.html" class="active">Planning</a></li>
-                    <li><a href="tactics.html">Tactics</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+            <ul id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="planning.html" class="active">Planning</a></li>
+                <li><a href="tactics.html">Tactics</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
         <div class="hero-image-outer">
             <div id="plan-hero-image-home"></div>
-            <div class="cover-headlines-outer">   
+            <div class="cover-headlines-outer">
                 <div class="cover-headlines">
-                    <h2 class="headlines-h2">“Marketing is too important to be left to the marketing department.”~ David Packard</h2>
+                    <h2 class="headlines-h2">“Marketing is too important to be left to the marketing department.”~ David
+                        Packard</h2>
                 </div>
-            </div>    
+            </div>
         </div>
     </main>
 
@@ -44,24 +47,29 @@
         <div class="plan-text-container">
             <h2>Marketing Planning</h2>
             <br>
-            <p>By working with you to create a clear marketing strategy,  based on your business goals, we can ensure everything is aligned to the bigger picture.  Your company's value proposition, your brand messaging and your customer demographics are key to reaching prospective customers and turning them into paying customers.</p>
+            <p>By working with you to create a clear marketing strategy, based on your business goals, we can ensure
+                everything is aligned to the bigger picture. Your company's value proposition, your brand messaging and
+                your customer demographics are key to reaching prospective customers and turning them into paying
+                customers.</p>
             <br>
             <p>Through the creation of a detailed marketing plan, we can ensure that your whole team understands:</p>
             <div class="list-container">
                 <ul class="list">
-                <li>What is happening</li>
-                <li>When it is going to happen</li>
-                <li>Why it is happening</li>
-                <li>Who is doing it</li>
-                <li>What the outcome is</li>
+                    <li>What is happening</li>
+                    <li>When it is going to happen</li>
+                    <li>Why it is happening</li>
+                    <li>Who is doing it</li>
+                    <li>What the outcome is</li>
                 </ul>
             </div>
-            <p>Bringing all of these elements together, at the right time, in the right way is vital. We understand the importance of campaign management and integration, not just within the marketing plan but across the business, so that all involved are on message and fully engaged.</p>
+            <p>Bringing all of these elements together, at the right time, in the right way is vital. We understand the
+                importance of campaign management and integration, not just within the marketing plan but across the
+                business, so that all involved are on message and fully engaged.</p>
         </div>
     </section>
 
     <footer class="footer">
-        
+
         <div class="infobox-content-1">
             <h3 class="title-left">Contact</h3>
         </div>
@@ -69,11 +77,14 @@
         <div class="infobox-content-2">
             <h3 class="title-right">Connect</h3>
         </div>
-                
+
         <div class="social-media-icons">
-            <a href="https://www.linkedin.com/company/rapier-group" target="_blank" rel="noopener" aria-label="Find us on Linkedin (opens in a new tab)"><i class="fab fa-linkedin"></i></a>
-            <a href="https://twitter.com/RapierMarketing" target="_blank" rel="noopener" aria-label="Find us on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.facebook.com/Rapier-Marketing-102795364837812" target="_blank" rel="noopener" aria-label="Find us on Facebook (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/company/rapier-group" target="_blank" rel="noopener"
+                aria-label="Find us on Linkedin (opens in a new tab)"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/RapierMarketing" target="_blank" rel="noopener"
+                aria-label="Find us on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/Rapier-Marketing-102795364837812" target="_blank" rel="noopener"
+                aria-label="Find us on Facebook (opens in a new tab)"><i class="fab fa-facebook"></i></a>
         </div>
 
         <div class="contact-info">
@@ -81,7 +92,8 @@
         </div>
 
     </footer>
-<!-- font awesome script -->
+    <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/b3341ec0dd.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
