--- a/planning.html
+++ b/planning.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Rapier Group Marketing Consultancy, based in Pershore, UK">
     <meta name="keywords" content="marketing consultant, clive pearson, pershore, worcestershire">
     <!--CREDIT: Favicon https://favicon.io/-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rapier Group | Clive Pearson</title>
