update meta keywords, description and page titles so they are all unique

--- a/tactics.html
+++ b/tactics.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rapier Group Marketing Consultancy, based in Pershore, UK">
-    <meta name="keywords" content="marketing consultant, clive pearson, pershore, worcestershire">
+    <meta name="description" content="Explore the wide range of marketing tactics that Rapier Group can provide">
+    <meta name="keywords" content="marketing planning services, marketing tactics, marketing strategy, marketing agency, digital marketing, traditional marketing">
     <!--CREDIT: Favicon https://favicon.io/-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rapier Group | Clive Pearson</title>
+    <title>Our Services | Here's what we can do for you | Rapier Group</title>
 </head>
 
 <body>
