--- a/planning.html
+++ b/planning.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rapier Group Marketing Consultancy, based in Pershore, UK">
-    <meta name="keywords" content="marketing consultant, clive pearson, pershore, worcestershire">
+    <meta name="description" content="An effective marketing plan will integrate seamlessly with your business goals">
+    <meta name="keywords" content="marketing plan, integrated marketing plan, brand messaging, brand strategy, marketing strategy">
     <!--CREDIT: Favicon https://favicon.io/-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rapier Group | Clive Pearson</title>
+    <title>Marketing Planning | Align with your business goals | Rapier Group</title>
 </head>
 
 <body>
