respecify path to two gallery images

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
       <div class="responsive">
         <div class="gallery">
-          <a target="_blank" href="assets/images/automated_exhibition_1.JPG">
-            <img src="assets/images/automated_exhibition_1.JPG"
+          <a target="_blank" href="assets/images/automated_exhibition_1.jpg">
+            <img src="assets/images/automated_exhibition_1.jpg"
               alt="A crowded exhibition booth for Automated Packaging Systems" width="600" height="400">
           </a>
           <div class="desc">Exhibition booth concept, delivery and management</div>
@@ -140,8 +140,8 @@
 
       <div class="responsive">
         <div class="gallery">
-          <a target="_blank" href="assets/images/medtech_exhibition_aps.JPG">
-            <img src="assets/images/medtech_exhibition_aps.JPG"
+          <a target="_blank" href="assets/images/medtech_exhibition_aps.jpg">
+            <img src="assets/images/medtech_exhibition_aps.jpg"
               alt="A small exhibition booth for Automated Packaging Systems" width="600" height="400">
           </a>
           <div class="desc">Small exhibition booth management</div>
