changed gallery descriptions in Past Projects gallery to be all over two lines.  Miraculously fixed image gallery layout problem

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <img src="assets/images/egberttaylor_exhibition_1.jpeg"
               alt="A medium-sized exhibition booth for Egbert Taylor" width="600" height="400">
           </a>
-          <div class="desc">A digital render of an exhibition booth design</div>
+          <div class="desc">Exhibition booth concept, delivery and management</div>
         </div>
       </div>
 
@@ -144,7 +144,7 @@
             <img src="assets/images/medtech_exhibition_aps.jpg"
               alt="A small exhibition booth for Automated Packaging Systems" width="600" height="400">
           </a>
-          <div class="desc">Small exhibition booth management</div>
+          <div class="desc">Exhibition booth concept, delivery and management</div>
         </div>
       </div>
 
