--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <label for="name">Name</label>
               </div>
               <div class="col-75">
-                <input type="text" id="name" name="name" placeholder="Your name.." required="" aria-required="" />
+                <input type="text" id="name" name="name" placeholder="Your name.." required="" aria-required="true" />
               </div>
             </div>
             <div class="row">
@@ -57,8 +57,7 @@
                 <label for="email">Email</label>
               </div>
               <div class="col-75">
-                <input type="email" id="email" name="email" placeholder="Your email address.." required=""
-                  aria-required="" />
+                <input type="email" id="email" name="email" placeholder="Your email address.." required="" aria-required="true" />
               </div>
             </div>
             <div class="row">
@@ -66,7 +65,7 @@
                 <label for="subject">Subject</label>
               </div>
               <div class="col-75">
-                <input type="text" id="subject" name="subject" placeholder="Subject.." required="" aria-required="" />
+                <input type="text" id="subject" name="subject" placeholder="Subject.." required="" aria-required="true" />
               </div>
             </div>
             <div class="row">
@@ -74,8 +73,7 @@
                 <label for="message">Message</label>
               </div>
               <div class="col-75">
-                <textarea id="message" name="message" placeholder="Write something.." required=""
-                  aria-required=""></textarea>
+                <textarea id="message" name="message" placeholder="Write something.." required="" aria-required="true" ></textarea>
               </div>
             </div>
             <div class="row">
