additions to readme - technologies used and amiresponive images

--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@
 
       <div class="contact-right-side">
         <div class="container">
+          <!--Form styling, from code at W3Schools https://www.w3schools.com/css/css_form.asp-->
           <!--action for form borrowed from CI lessons-->
           <form class="enquiry-form" action="https://formdump.codeinstitute.net/" method="POST">
             <div class="row">
