--- a/tactics.html
+++ b/tactics.html
@@ -66,6 +66,7 @@
         </section>
 
         <!--Marketing Tactics table section-->
+        <!--Responsive table, adapted from code related to this article at CSS Tricks https://css-tricks.com/accessible-simple-responsive-tables/-->
 
         <section>
             <div class="tactics-table-container">
