--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 
     <nav>
       <ul id="menu">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="planning.html">Planning</a></li>
         <li><a href="tactics.html">Tactics</a></li>
         <li><a href="contact.html">Contact</a></li>
