remove formdump link from form action on contact.html, as per my mentor

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         <div class="container">
           <!--Form styling, from code at W3Schools https://www.w3schools.com/css/css_form.asp-->
           <!--action for form borrowed from CI lessons-->
-          <form class="enquiry-form" action="https://formdump.codeinstitute.net/" method="POST">
+          <form class="enquiry-form" action="#">
             <div class="row">
               <div class="col-25">
                 <label for="name">Name</label>
