add photo of clive pearson to contact.html and style

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,9 @@
           <h2>Let's Talk</h2>
           <h4>clive@rapiergroup.co.uk</h4>
         </div>
+          <div class="contact-image-circle">
+            <img src="assets/images/clive_pearson_rapier.jpg" alt="Clive Pearson of Rapier Marketing" class="contact-image">
+          </div>
       </div>
 
       <div class="contact-right-side">
