add images to contact.html, style and write media queries

--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,17 @@
           <h2>Let's Talk</h2>
           <h4>clive@rapiergroup.co.uk</h4>
         </div>
+          <div class="circle-row">
           <div class="contact-image-circle">
-            <img src="assets/images/clive_pearson_rapier.jpg" alt="Clive Pearson of Rapier Marketing" class="contact-image">
+            <img src="assets/images/clive_pearson_rapier.jpg" alt="Clive Pearson of Rapier Marketing smiling and wearing a suit without a tie" class="contact-image">
           </div>
+          <div class="contact-image-circle">
+            <img src="assets/images/clive_pearson_rapier3.jpg" alt="Clive Pearson of Rapier Marketing cruising down a rapid in a kayak" class="contact-image">
+          </div>
+          <div class="contact-image-circle">
+            <img src="assets/images/clive_pearson_rapier2.jpg" alt="Clive Pearson of Rapier Marketing holding a micropone and giving a speech" class="contact-image">
+          </div>
+        </div>
       </div>
 
       <div class="contact-right-side">
@@ -77,7 +85,7 @@
                 <label for="message">Message</label>
               </div>
               <div class="col-75">
-                <textarea id="message" name="message" placeholder="Write something.." required="" aria-required="true" ></textarea>
+                <textarea id="message" name="message" placeholder="Write something.." required="" aria-required="true" rows="7" ></textarea>
               </div>
             </div>
             <div class="row">
