fix reuse of hero-image id on 404 page

--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
 
   <main>
     <div class="hero-image-outer">
-        <div id="hero-image-home"></div>
+        <div id="hero-image-404"></div>
         <div class="cover-headlines-outer">
           <div class="cover-headlines">
             <h2>404</h2>
