add extra line of text into contact.html

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,9 @@
         <div class="form-title">
           <h2>Let's Talk</h2>
           <h4>clive@rapiergroup.co.uk</h4>
+          <div class="form-text">
+          <h4>Email, call or drop us a message using the form.</h4>
+        </div>
         </div>
           <div class="circle-row">
           <div class="contact-image-circle">
