remove spaces and recheck indentation on all pages

--- a/contact.html
+++ b/contact.html
@@ -38,18 +38,21 @@
           <h2>Let's Talk</h2>
           <h4>clive@rapiergroup.co.uk</h4>
           <div class="form-text">
-          <h4>Email, call or drop us a message using the form.</h4>
+            <h4>Email, call or drop us a message using the form.</h4>
+          </div>
         </div>
-        </div>
-          <div class="circle-row">
+        <div class="circle-row">
           <div class="contact-image-circle">
-            <img src="assets/images/clive_pearson_rapier.jpg" alt="Clive Pearson of Rapier Marketing smiling and wearing a suit without a tie" class="contact-image">
+            <img src="assets/images/clive_pearson_rapier.jpg"
+              alt="Clive Pearson of Rapier Marketing smiling and wearing a suit without a tie" class="contact-image">
           </div>
           <div class="contact-image-circle">
-            <img src="assets/images/clive_pearson_rapier3.jpg" alt="Clive Pearson of Rapier Marketing cruising down a rapid in a kayak" class="contact-image">
+            <img src="assets/images/clive_pearson_rapier3.jpg"
+              alt="Clive Pearson of Rapier Marketing cruising down a rapid in a kayak" class="contact-image">
           </div>
           <div class="contact-image-circle">
-            <img src="assets/images/clive_pearson_rapier2.jpg" alt="Clive Pearson of Rapier Marketing holding a micropone and giving a speech" class="contact-image">
+            <img src="assets/images/clive_pearson_rapier2.jpg"
+              alt="Clive Pearson of Rapier Marketing holding a micropone and giving a speech" class="contact-image">
           </div>
         </div>
       </div>
@@ -72,7 +75,8 @@
                 <label for="email">Email</label>
               </div>
               <div class="col-75">
-                <input type="email" id="email" name="email" placeholder="Your email address.." required="" aria-required="true" />
+                <input type="email" id="email" name="email" placeholder="Your email address.." required=""
+                  aria-required="true" />
               </div>
             </div>
             <div class="row">
@@ -80,7 +84,8 @@
                 <label for="subject">Subject</label>
               </div>
               <div class="col-75">
-                <input type="text" id="subject" name="subject" placeholder="Subject.." required="" aria-required="true" />
+                <input type="text" id="subject" name="subject" placeholder="Subject.." required=""
+                  aria-required="true" />
               </div>
             </div>
             <div class="row">
@@ -88,7 +93,8 @@
                 <label for="message">Message</label>
               </div>
               <div class="col-75">
-                <textarea id="message" name="message" placeholder="Write something.." required="" aria-required="true" rows="7" ></textarea>
+                <textarea id="message" name="message" placeholder="Write something.." required="" aria-required="true"
+                  rows="7"></textarea>
               </div>
             </div>
             <div class="row">
@@ -99,8 +105,6 @@
       </div>
     </div>
   </main>
-
-
 
   <footer class="footer">
 
