--- a/tactics.html
+++ b/tactics.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore the wide range of marketing tactics that Rapier Group can provide">
-    <meta name="keywords" content="marketing planning services, marketing tactics, marketing strategy, marketing agency, digital marketing, traditional marketing">
+    <meta name="keywords"
+        content="marketing planning services, marketing tactics, marketing strategy, marketing agency, digital marketing, traditional marketing">
     <!--CREDIT: Favicon https://favicon.io/-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
