minor copy changes on index.html and tactics.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div id="centre-box">
             <i class="fas fa-desktop fa-3x"></i>
             <h3>Marketing Plans</h3>
-            <p>We work with you to develop strategic and engaging marketing plans to enabling you to specifically target
+            <p>We work with you to develop strategic and engaging marketing plans to enable you to specifically target
               customer and potential customer groups, partners and stakeholders. Enquiry generation, improved conversion
               and increased ROI is our speciality.</p>
           </div>
