--- a/tactics.html
+++ b/tactics.html
@@ -61,7 +61,7 @@
                 <p>How do your customers consume information, how do they receive and integrate with your message, what
                     makes them engage? We will select the most appropriate tactics, design and craft highly relevant
                     messages and incorporate them into the marketing plan.</p>
-                <p>We will make sure the message and tactics are highly relevant, targeted and engaging. Bringing these
+                <p>We will make sure the message and tactics are applicable, targeted and engaging. Bringing these
                     elements together at the right time and in the right way is vital. It is what we do!</p>
             </div>
         </section>
