fixing issue with th and h3 element on tactics.html revealed during testing

--- a/tactics.html
+++ b/tactics.html
@@ -77,19 +77,19 @@
                     <thead>
                         <tr>
                             <th class="box Rtable-cell">
-                                <h3><strong>Corporate</strong></h3>
+                                <strong>Corporate</strong>
                             </th>
                             <th class="box Rtable-cell">
-                                <h3><strong>Publications</strong></h3>
+                                <strong>Publications</strong>
                             </th>
                             <th class="box Rtable-cell">
-                                <h3><strong>Events</strong></h3>
+                                <strong>Events</strong>
                             </th>
                             <th class="box Rtable-cell">
-                                <h3><strong>Digital</strong></h3>
+                                <strong>Digital</strong>
                             </th>
                             <th class="box Rtable-cell">
-                                <h3><strong>Literature</strong></h3>
+                                <strong>Literature</strong>
                             </th>
                         </tr>
                     </thead>
