update readme re. th h3 element issue and restyle to mimic a h3 element

--- a/tactics.html
+++ b/tactics.html
@@ -77,19 +77,19 @@
                     <thead>
                         <tr>
                             <th class="box Rtable-cell">
-                                <strong>Corporate</strong>
+                                Corporate
                             </th>
                             <th class="box Rtable-cell">
-                                <strong>Publications</strong>
+                                Publications
                             </th>
                             <th class="box Rtable-cell">
-                                <strong>Events</strong>
+                                Events
                             </th>
                             <th class="box Rtable-cell">
-                                <strong>Digital</strong>
+                                Digital
                             </th>
                             <th class="box Rtable-cell">
-                                <strong>Literature</strong>
+                                Literature
                             </th>
                         </tr>
                     </thead>
