add closing tag for main on 404.html

--- a/404.html
+++ b/404.html
@@ -52,6 +52,7 @@
         <h2>There's no place like <a href="index.html">Home</a>.</h2>
       </div>
     </section>
+  </main>
 
     <!--Footer, CTA and social links-->
     <footer class="footer">
