--- a/404.html
+++ b/404.html
@@ -20,7 +20,9 @@
   <!--Logo & Navigation-->
 
   <header>
-    <h1 id="logo">Rapier Group</h1>
+    <a href="index.html"></a>
+      <h1 id="logo">Rapier Group</h1>
+    </a>
 
     <nav>
       <ul id="menu">
@@ -54,34 +56,34 @@
     </section>
   </main>
 
-    <!--Footer, CTA and social links-->
-    <footer class="footer">
+  <!--Footer, CTA and social links-->
+  <footer class="footer">
 
-      <div class="infobox-content-1">
-        <h3 class="title-left">Contact</h3>
-      </div>
+    <div class="infobox-content-1">
+      <h3 class="title-left">Contact</h3>
+    </div>
 
-      <div class="infobox-content-2">
-        <h3 class="title-right">Connect</h3>
-      </div>
+    <div class="infobox-content-2">
+      <h3 class="title-right">Connect</h3>
+    </div>
 
-      <div class="social-media-icons">
-        <a href="https://www.linkedin.com/company/rapier-group" target="_blank" rel="noopener"
-          aria-label="Find us on Linkedin (opens in a new tab)"><i class="fab fa-linkedin"></i></a>
-        <a href="https://twitter.com/RapierMarketing" target="_blank" rel="noopener"
-          aria-label="Find us on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.facebook.com/Rapier-Marketing-102795364837812" target="_blank" rel="noopener"
-          aria-label="Find us on Facebook (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-      </div>
+    <div class="social-media-icons">
+      <a href="https://www.linkedin.com/company/rapier-group" target="_blank" rel="noopener"
+        aria-label="Find us on Linkedin (opens in a new tab)"><i class="fab fa-linkedin"></i></a>
+      <a href="https://twitter.com/RapierMarketing" target="_blank" rel="noopener"
+        aria-label="Find us on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.facebook.com/Rapier-Marketing-102795364837812" target="_blank" rel="noopener"
+        aria-label="Find us on Facebook (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+    </div>
 
-      <div class="contact-info">
-        <p>Call Clive Pearson on 07725 323393</p>
-      </div>
+    <div class="contact-info">
+      <p>Call Clive Pearson on 07725 323393</p>
+    </div>
 
-    </footer>
+  </footer>
 
-    <!-- font awesome script -->
-    <script src="https://kit.fontawesome.com/b3341ec0dd.js" crossorigin="anonymous"></script>
+  <!-- font awesome script -->
+  <script src="https://kit.fontawesome.com/b3341ec0dd.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
