--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
   <!--Logo & Navigation-->
 
   <header>
-    <a href="index.html"></a>
+    <a href="index.html">
       <h1 id="logo">Rapier Group</h1>
     </a>
 
@@ -68,7 +68,7 @@
     </div>
 
     <div class="social-media-icons">
-      <a href="https://www.linkedin.com/company/rapier-group" target="_blank" rel="noopener"
+      <a href="https://www.linkedin.com/in/clivepearson/" target="_blank" rel="noopener"
         aria-label="Find us on Linkedin (opens in a new tab)"><i class="fab fa-linkedin"></i></a>
       <a href="https://twitter.com/RapierMarketing" target="_blank" rel="noopener"
         aria-label="Find us on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
