--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="social-media-icons">
-      <a href="https://www.linkedin.com/company/rapier-group" target="_blank" rel="noopener"
+      <a href="https://www.linkedin.com/in/clivepearson/" target="_blank" rel="noopener"
         aria-label="Find us on Linkedin (opens in a new tab)"><i class="fab fa-linkedin"></i></a>
       <a href="https://twitter.com/RapierMarketing" target="_blank" rel="noopener"
         aria-label="Find us on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
