--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </div>
 
     <div class="social-media-icons">
-      <a href="https://www.linkedin.com/company/rapier-group" target="_blank" rel="noopener"
+      <a href="https://www.linkedin.com/in/clivepearson/" target="_blank" rel="noopener"
         aria-label="Find us on Linkedin (opens in a new tab)"><i class="fab fa-linkedin"></i></a>
       <a href="https://twitter.com/RapierMarketing" target="_blank" rel="noopener"
         aria-label="Find us on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
@@ -262,7 +262,7 @@
     </div>
 
     <div class="contact-info">
-      <p>Call Clive Pearson on 07725 323393</p>
+      <p>Call Clive Pearson on <a href="tel:07725323393">07725 323393</a></p>
     </div>
 
   </footer>
